# esconf

./: .gitignore  .gitlab-ci.yml  AUTHORS  Makefile.am  NEWS  README.md  TODO  autogen.sh  configure.ac.in
common/: Makefile.am  esconf-common-private.h  esconf-dbus.xml  esconf-errors.c  esconf-gvaluefuncs.c  esconf-gvaluefuncs.h  esconf-types.c  make-exo-alias.pl
completions/: Makefile.am  esconf-query
docs/reference/: Makefile.am  esconf-docs.xml  esconf-sections.txt  esconf.types
docs/spec/: backend.txt  general.txt  lockdown-behavior.txt  perchannel-xml.txt
esconf/: Makefile.am  abicheck.sh  esconf-binding.c  esconf-binding.h  esconf-cache.c  esconf-cache.h  esconf-channel.c  esconf-channel.h  esconf-errors.h  esconf-private.h  esconf-types.h  esconf.c  esconf.h  esconf.symbols  libesconf-0.pc.in
esconf-query/: Makefile.am  main.c
esconfd/: Makefile.am  com.expidus.Esconf.service.in  esconf-backend-factory.c  esconf-backend-factory.h  esconf-backend-perchannel-xml.c  esconf-backend-perchannel-xml.h  esconf-backend.c  esconf-backend.h  esconf-daemon.c  esconf-daemon.h  esconf-locking-utils.c  esconf-locking-utils.h  main.c
gsettings-backend/: Makefile.am  esconf-giomodule.c  esconf-gsettings-backend.c  esconf-gsettings-backend.h
po/: POTFILES.in  ar.po  ast.po  be.po  bg.po  bn.po  ca.po  cs.po  da.po  de.po  el.po  en_AU.po  en_CA.po  en_GB.po  es.po  eu.po  fi.po  fr.po  gl.po  he.po  hr.po  hu.po  hy_AM.po  hye.po  id.po  is.po  it.po  ja.po  kab.po  kk.po  ko.po  lt.po  lv.po  ms.po  nb.po  nl.po  nn.po  oc.po  pa.po  pl.po  (+20 more)
tests/: Makefile.inc  tests-common.h  tests-driver.sh
tests/get-properties/: t-get-arrayv.c  t-get-boolean.c  t-get-double.c  t-get-int.c  t-get-string.c  t-get-stringlist.c  t-get-uint64.c
tests/has-properties/: Makefile.am  t-has-arrayv.c  t-has-boolean.c  t-has-double.c  t-has-int.c  t-has-string.c  t-has-stringlist.c  t-has-uint64.c
tests/list-channels/: t-list-channels.c
tests/object-bindings/: t-object-bindings.c
tests/others/: t-issue-16.c
tests/property-changed-signal/: t-string-changed-signal-detailed.c  t-string-changed-signal.c
tests/reset-properties/: t-reset-arrayv.c  t-reset-boolean.c  t-reset-double.c  t-reset-int.c  t-reset-string.c  t-reset-stringlist.c  t-reset-uint64.c
tests/set-properties/: t-set-arrayv.c  t-set-boolean.c  t-set-double.c  t-set-int.c  t-set-string.c  t-set-stringlist.c  t-set-uint64.c
tests/tests-end/: t-tests-end.c
